Fixed modal position (scrollbar bug) + misc UI improvements

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -5,8 +5,9 @@
     justify-content: center;
     height: 100%;
     left: 0;
+    padding-top: var(--top-screen-padding);
     position: absolute;
-    top: 6rem;
+    top: 0;
     width: 100%;
     z-index: 200;
 }
